--- a/src/App.css
+++ b/src/App.css
@@ -31,18 +31,25 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
 .login-container {
-  background: #c09f80;
+  /* background: #c09f80;
   background: -webkit-linear-gradient(top left,#c09f80,#d7cec7);
   background: -moz-linear-gradient(top left,#c09f80,#d7cec7);
   background: linear-gradient(top left,#c09f80,#d7cec7);
   width: 100%;
+  height: 100vh; */
+  width: 100%;
   height: 100vh;
+  background-image: linear-gradient(bottom left, #13547a 0%, #80d0c7 100%);
 }
 .login-card{
-  box-shadow: 5px 5px 18px #76323f;
+  /* box-shadow: 5px 5px 18px #76323f;
   background-color: #76323f; 
+  top: 25vh; */
+  box-shadow: 0px 0px 0px transparent;
   top: 25vh;
+  background-color: transparent;
 }
 
 .login-title{
